[gd_scene load_steps=10 format=3 uid="uid://07n4fhjhunl"]

[ext_resource type="Script" path="res://lib/objects/laser/laser.gd" id="1_qy5bo"]
[ext_resource type="PackedScene" uid="uid://bbt6np1daksl4" path="res://lib/objects/cable/cable.tscn" id="2_qx4ym"]
[ext_resource type="Script" path="res://lib/objects/laser/Cast.gd" id="3_0t5vk"]
[ext_resource type="Texture2D" uid="uid://xn6ih4gyo82p" path="res://generic/tex/shader_tex/tile_emit.png" id="3_xws8f"]
[ext_resource type="Texture2D" uid="uid://bio1xu5ncuvte" path="res://generic/tex/shader_tex/tile_norm.png" id="4_6cats"]
[ext_resource type="ArrayMesh" uid="uid://cgix1hwbg5e4s" path="res://maps/test_room/objects/laser_turret/turret_placeholder.obj" id="5_ax68d"]
[ext_resource type="PackedScene" uid="uid://c542303ron8x" path="res://lib/interact_area/interact_area.tscn" id="7_6xnlv"]
[ext_resource type="AudioStream" uid="uid://ksek1nmbm7lq" path="res://lib/objects/laser/enter_laser.ogg" id="8_pae4y"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oc3v8"]
albedo_texture = ExtResource("3_xws8f")
normal_enabled = true
normal_texture = ExtResource("4_6cats")
backlight = Color(0.5, 0.5, 0.5, 1)
uv1_scale = Vector3(64, 64, 64)

[node name="Laser" type="Node3D"]
script = ExtResource("1_qy5bo")

[node name="Cable" parent="." instance=ExtResource("2_qx4ym")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
visible = false

[node name="Cast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1.5)
target_position = Vector3(0, 0, -30)
collision_mask = 2
script = ExtResource("3_0t5vk")

[node name="EndPoint" type="Node3D" parent="Cast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7)

[node name="TurretPlaceholder" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_oc3v8")
mesh = ExtResource("5_ax68d")

[node name="DockingPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4, 0.3)

[node name="InteractArea" parent="." instance=ExtResource("7_6xnlv")]
debug_messages = false

[node name="EnterLaser" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_pae4y")
volume_db = -4.0
